5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4161/executions/1638_87.log
== TEST (2019-04-04 20:42:58) 
-- CODE:
a = int(input("numero1: "))
b = int(input("numero2: "))
c = int(input("numero3: "))
if (a>b), (b>c):
	print(c)
-- ERROR:
File "XXXX", line 4
    if (a>b), (b>c):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:43:06) 
-- CODE:
a = int(input("numero1: "))
b = int(input("numero2: "))
c = int(input("numero3: "))
if (a>b)+ (b>c):
	print(c)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:43:19) 
-- CODE:
a = int(input("numero1: "))
b = int(input("numero2: "))
c = int(input("numero3: "))
if (a>b) + (b>c):
	print(c)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:43:34) 
-- CODE:
a = int(input("numero1: "))
b = int(input("numero2: "))
c = int(input("numero3: "))
if (a>b) + (b>c):
	print(c)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:44:08) 
-- CODE:
a = int(input("numero1: "))
b = int(input("numero2: "))
c = int(input("numero3: "))
if (a>b>c):
	print(c)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:44:11) 
-- CODE:
a = int(input("numero1: "))
b = int(input("numero2: "))
c = int(input("numero3: "))
if (a>b>c):
	print(c)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:46:04) 
-- CODE:
a = int(input("numero1: "))
b = int(input("numero2: "))
c = int(input("numero3: "))
if (a>b>c):
	print(c)
if (a>c>b):
	print(b)
if (b>c>a):
	print(a)
if (b>a>c):
	print(c)
if (c>b>a):
	print(a)
if (c>a>b):
	print(b)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:46:14) 
-- CODE:
a = int(input("numero1: "))
b = int(input("numero2: "))
c = int(input("numero3: "))
if (a>b>c):
	print(c)
if (a>c>b):
	print(b)
if (b>c>a):
	print(a)
if (b>a>c):
	print(c)
if (c>b>a):
	print(a)
if (c>a>b):
	print(b)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:46:24) 
-- CODE:
a = int(input("numero1: "))
b = int(input("numero2: "))
c = int(input("numero3: "))
if (a>b>c):
	print(c)
if (a>c>b):
	print(b)
if (b>c>a):
	print(a)
if (b>a>c):
	print(c)
if (c>b>a):
	print(a)
if (c>a>b):
	print(b)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 20:46:35) 
-- CODE:
a = int(input("numero1: "))
b = int(input("numero2: "))
c = int(input("numero3: "))
if (a>b>c):
	print(c)
if (a>c>b):
	print(b)
if (b>c>a):
	print(a)
if (b>a>c):
	print(c)
if (c>b>a):
	print(a)
if (c>a>b):
	print(b)
-- EXECUTION TIME:
0.168117
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
35
---- user output:
35
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
55
---- user output:
55
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
123
---- user output:
123
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:28:53) 
-- CODE:
a = int(input("numero1: "))
b = int(input("numero2: "))
c = int(input("numero3: "))
if (a>b>c):
	print(c)
if (a>c>b):
	print(b)
if (b>c>a):
	print(a)
if (b>a>c):
	print(c)
if (c>b>a):
	print(a)
if (c>a>b):
	print(b)
-- EXECUTION TIME:
0.141691
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
35
---- user output:
35
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
55
---- user output:
55
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
123
---- user output:
123
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
